Filter spacing issue resolve 1610

--- a/app/public/styles/plpContainer/rwdPLPContainer.scss
+++ b/app/public/styles/plpContainer/rwdPLPContainer.scss
@@ -462,7 +462,7 @@
               text-align: left;
             }
             .label_text_disable {
-              padding: 0 0px 15px 0;
+              padding: 0 0px 0px 0;
               color: #c9c9c9;
               font-size: $base * 1.5;
               text-align: left;
